Corrected file location in manpage

--- a/debian/man/pamface-conf.1
+++ b/debian/man/pamface-conf.1
@@ -41,7 +41,7 @@ Show summary of options.
 .PP
 
 .SH FILES
-/etc/pamface.conf
+/etc/pamface/pamface.conf
 
 .SH AUTHORS
 Philipp Meisberger <team@pm-codeworks.de>
